--- a/forward_propagation.ipynb
+++ b/forward_propagation.ipynb
@@ -37,11 +37,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "s7QgoFMXi_wz",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 1: Predict"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ctYO60Gf6wpF",
         "colab_type": "text"
       },
       "source": [
-        "## Step 1: Predict\n",
+        "\n",
         "You learned about the paradigm predict, compare, learn. In this guide, we’ll dive deep into the first step: **predict**.\n",
         "<img src=\"https://github.com/rahiakela/img-repo/blob/master/predict1.JPG?raw=1\" width=\"800\"/>\n",
         "\n",
@@ -418,11 +428,11 @@
       "metadata": {
         "id": "9k6iLS_1V-CC",
         "colab_type": "code",
+        "outputId": "140bf0e1-04c8-4f70-b6c5-b5f5854f3456",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "140bf0e1-04c8-4f70-b6c5-b5f5854f3456"
+        }
       },
       "source": [
         "toes = [8.5, 9.5, 9.9, 9.0]\n",
@@ -436,7 +446,7 @@
         "prediction = neural_network(inputs, weights)\n",
         "print(prediction)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,11 +551,11 @@
       "metadata": {
         "id": "0aRviTCVWvUb",
         "colab_type": "code",
+        "outputId": "a51595f3-2afc-4cce-e8f3-c0c953f47d48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
-        },
-        "outputId": "a51595f3-2afc-4cce-e8f3-c0c953f47d48"
+        }
       },
       "source": [
         "a = [0, 1, 0, 1]\n",
@@ -561,7 +571,7 @@
         "print(weight_sum(d, d))\n",
         "print(weight_sum(c, e))"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,16 +609,16 @@
       "metadata": {
         "id": "XpNjASW0c57E",
         "colab_type": "code",
+        "outputId": "931329fc-5d7d-411d-a5c0-8264d5f1f52d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "931329fc-5d7d-411d-a5c0-8264d5f1f52d"
+        }
       },
       "source": [
         "print(weight_sum(e, e))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,16 +733,16 @@
       "metadata": {
         "id": "gi7i46_Whohc",
         "colab_type": "code",
+        "outputId": "770c5b61-1657-4110-bbf3-1e071d0406e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "770c5b61-1657-4110-bbf3-1e071d0406e6"
+        }
       },
       "source": [
         "print(weight_sum(c, d))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,18 +768,18 @@
       "metadata": {
         "id": "LYUdayR6htgo",
         "colab_type": "code",
+        "outputId": "ae615eec-d59c-4c6d-c94c-e26619132612",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ae615eec-d59c-4c6d-c94c-e26619132612"
+        }
       },
       "source": [
         "d = [.5, 0,.5, 0]\n",
         "e = [-1, 1, 0, 0]\n",
         "print(weight_sum(d, e))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +824,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Multiple inputs: Complete runnable code"
+        "## Multiple inputs: Complete runnable code"
       ]
     },
     {
@@ -824,7 +834,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Pure Pythonic Neural Network"
+        "### Pure Pythonic Neural Network"
       ]
     },
     {
@@ -843,11 +853,11 @@
       "metadata": {
         "id": "_-jzNhuDkdoV",
         "colab_type": "code",
+        "outputId": "3e849ca4-2b15-4cb4-eb2b-057ae92e8491",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "3e849ca4-2b15-4cb4-eb2b-057ae92e8491"
+        }
       },
       "source": [
         "def weight_sum(X, W):\n",
@@ -877,7 +887,7 @@
         "pred = neural_network(inputs, weights)\n",
         "print(pred)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +905,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Neural Network using Numpy"
+        "### Neural Network using Numpy"
       ]
     },
     {
@@ -928,11 +938,11 @@
       "metadata": {
         "id": "ryy1dD9HnHv2",
         "colab_type": "code",
+        "outputId": "65df6c84-df9e-4a9e-d5ae-1920aee7933d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "65df6c84-df9e-4a9e-d5ae-1920aee7933d"
+        }
       },
       "source": [
         "# define the weight\n",
@@ -954,7 +964,7 @@
         "pred = neural_network(inputs, weights)\n",
         "print(pred)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,11 +980,11 @@
       "metadata": {
         "id": "bYXS68FMoKF9",
         "colab_type": "code",
+        "outputId": "dde8cfe8-eccb-46da-f803-26a34437660c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "dde8cfe8-eccb-46da-f803-26a34437660c"
+        }
       },
       "source": [
         "# Input feature corresponds to every entry for the second game of the season.\n",
@@ -984,7 +994,7 @@
         "pred = neural_network(inputs, weights)\n",
         "print(pred)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,11 +1010,11 @@
       "metadata": {
         "id": "8ou0wpmXoS7Z",
         "colab_type": "code",
+        "outputId": "5adf46e5-a7f6-4fdc-ae2b-808778064418",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "5adf46e5-a7f6-4fdc-ae2b-808778064418"
+        }
       },
       "source": [
         "# Input feature corresponds to every entry for the third game of the season.\n",
@@ -1014,7 +1024,7 @@
         "pred = neural_network(inputs, weights)\n",
         "print(pred)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,8 +1056,378 @@
         "colab_type": "text"
       },
       "source": [
-        "# Making a prediction with multiple outputs"
+        "# Making a prediction with multiple outputs\n",
+        "\n",
+        "**Neural networks can also make multiple predictions using only a\n",
+        "single input.**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HxmG4NB5kKJI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Perhaps a simpler augmentation than multiple inputs is multiple outputs. Prediction occurs\n",
+        "the same as if there were three disconnected single-weight neural networks.\n",
+        "\n",
+        "### An empty network with multiple outputs\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/empty-network-with-multiple-outputs-1.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "The most important comment in this setting is to notice that the three predictions are\n",
+        "completely separate. Unlike neural networks with multiple inputs and a single output, where\n",
+        "the prediction is undeniably connected, this network truly behaves as three independent\n",
+        "components, each receiving the same input data.\n",
+        "\n",
+        "### Inserting one input datapoint\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/empty-network-with-multiple-outputs-2.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "### Performing elementwise multiplication\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/empty-network-with-multiple-outputs-3.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "### Depositing predictions\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/empty-network-with-multiple-outputs-4.JPG?raw=1\" width=\"800\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hg9sDkiImSGR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Multiple outputs: Complete runnable code"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-7w0jAEkmTa9",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Pure Pythonic Neural Network"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sUbw1MzVmXt_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "96d437ec-fc34-40be-a3c8-9ba1beb33287"
+      },
+      "source": [
+        "def weight_mul(Xi, W):\n",
+        "  # define multiple output length\n",
+        "  output = [0, 0, 0]\n",
+        "  assert(len(output) == len(W))\n",
+        "\n",
+        "  for i in range(len(W)):\n",
+        "    output[i] = (Xi * W[i])\n",
+        "  return output\n",
+        "\n",
+        "# define the weight\n",
+        "weights = [0.3, 0.2, 0.9]\n",
+        "\n",
+        "def neural_network(feature, weights):\n",
+        "  prediction = weight_mul(feature, weights)\n",
+        "  return prediction\n",
+        "\n",
+        "# define siglne feature as all game of the season\n",
+        "wlrec = [0.65, 0.8, 0.8, 0.9]  \n",
+        "\n",
+        "# input siglne feature corresponds to one entry for the first game of the season.\n",
+        "input_one = wlrec[0]\n",
+        "\n",
+        "# make prediction\n",
+        "pred = neural_network(input_one, weights)\n",
+        "print(pred)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.195, 0.13, 0.5850000000000001]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wejlFKy7ogPj",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Neural Network using Numpy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "St18Y3LXpEY2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZiKoq5dogxw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "be3cc7ff-8823-4cf4-c0da-254306f403fe"
+      },
+      "source": [
+        "# define the weight\n",
+        "weights = np.array([0.3, 0.2, 0.9])\n",
+        "\n",
+        "def neural_network(feature, weights):\n",
+        "  prediction = np.multiply(weights, feature)\n",
+        "  return prediction\n",
+        "\n",
+        "# define single feature as all game of the season\n",
+        "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+        "\n",
+        "# input single feature corresponds to single entry for the first game of the season.\n",
+        "input_one =wlrec[0]\n",
+        "\n",
+        "# make prediction\n",
+        "pred = neural_network(input_one, weights)\n",
+        "print(pred)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.195 0.13  0.585]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gb44zZvnqIk3",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Predicting with multiple inputs and outputs\n",
+        "\n",
+        "** Neural networks can predict multiple outputs given\n",
+        "multiple inputs.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VKkyr3SyqY1N",
+        "colab_type": "text"
+      },
+      "source": [
+        "Finally, the way you build a network with multiple inputs or outputs can be combined to build\n",
+        "a network that has both multiple inputs and multiple outputs. As before, a weight connects each\n",
+        "input node to each output node, and prediction occurs in the usual way.\n",
+        "\n",
+        "### An empty network with multiple inputs and outputs\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/network-with-multiple-inputs-and-outputs-1.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "### Inserting one input datapoint\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/network-with-multiple-inputs-and-outputs-2.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "### For each output, performing a weighted sum of inputs\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/network-with-multiple-inputs-and-outputs-4.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "### Depositing predictions\n",
+        "\n",
+        "<img src=\"https://github.com/rahiakela/img-repo/blob/master/network-with-multiple-inputs-and-outputs-5.JPG?raw=1\" width=\"800\"/>\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1H4Q1Acns6EA",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Multiple inputs and outputs: Complete runnable code"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SE-3_HR7s_vY",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Pure Pythonic Neural Network"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IqNh_reToJzM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "65177681-bced-4cf0-8aa6-0c47a38455a2"
+      },
+      "source": [
+        "# summition of weights and features\n",
+        "def weight_sum(X, W):\n",
+        "  assert(len(X) == len(W))\n",
+        "\n",
+        "  result = 0\n",
+        "  for i in range(len(X)):\n",
+        "    result += (X[i] * W[i])\n",
+        "  return result\n",
+        "\n",
+        "# multiplication of weights and features vector\n",
+        "def vect_mat_mul(features_vec, weights_matrix):\n",
+        "  assert(len(features_vec) == len(weights_matrix))\n",
+        "\n",
+        "  # define the output length\n",
+        "  output = [0, 0, 0]\n",
+        "  for i in range(len(features_vec)):\n",
+        "    output[i] = weight_sum(features_vec, weights_matrix[i])\n",
+        "  return output\n",
+        "\n",
+        "# define the weight\n",
+        "# toes % win # fans\n",
+        "weights = [\n",
+        "  [0.1, 0.1, -0.3],  # hurt?\n",
+        "  [0.1, 0.2, 0.0],   # win?\n",
+        "  [0.0, 1.3, 0.1]    # sad?\n",
+        "]\n",
+        "\n",
+        "def neural_network(features_vec, weights_matrix):\n",
+        "  prediction = vect_mat_mul(features_vec, weights_matrix)\n",
+        "  return prediction\n",
+        "\n",
+        "# define features as all game of the season\n",
+        "toes = [8.5, 9.5, 9.9, 9.0]\n",
+        "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+        "nfans = [1.2, 1.3, 0.5, 1.0]  \n",
+        "\n",
+        "# input feature corresponds to every entry for the first game of the season.\n",
+        "inputs = [toes[0], wlrec[0], nfans[0]]\n",
+        "\n",
+        "# make prediction\n",
+        "pred = neural_network(inputs, weights)\n",
+        "print(pred)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.555, 0.9800000000000001, 0.9650000000000001]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "quOlrQ-t1VSJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Neural Network using Numpy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "afI5Xo1l0XDo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "55c8a47e-a0f8-41d0-ddcd-eb41daa13db0"
+      },
+      "source": [
+        "# define the weight\n",
+        "# toes % win # fans\n",
+        "weights = np.array([\n",
+        "   [0.1, 0.1, -0.3],  # hurt?\n",
+        "   [0.1, 0.2, 0.0],   # win?\n",
+        "   [0.0, 1.3, 0.1]    # sad?                 \n",
+        "])\n",
+        "\n",
+        "def neural_network(features, weights):\n",
+        "  prediction = [0, 0, 0]\n",
+        "  #dot_prod = features.dot(weights)\n",
+        "  for i in range(len(features)):\n",
+        "    prediction[i] = features.dot(weights[i])\n",
+        "    #prediction = np.matmul(features, weights)\n",
+        "  return prediction\n",
+        "\n",
+        "# define features as all game of the season\n",
+        "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+        "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+        "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+        "\n",
+        "# Input feature corresponds to every entry for the first game of the season.\n",
+        "inputs = np.array([toes[0], wlrec[0], nfans[0]])\n",
+        "\n",
+        "# make prediction\n",
+        "pred = neural_network(inputs, weights)\n",
+        "print(pred)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.555, 0.9800000000000001, 0.9650000000000001]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a64pUO2A2l3k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
