--- a/forward_propagation.ipynb
+++ b/forward_propagation.ipynb
@@ -1374,7 +1374,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "55c8a47e-a0f8-41d0-ddcd-eb41daa13db0"
+        "outputId": "46621d3f-7eee-4778-b0c7-f502261332c9"
       },
       "source": [
         "# define the weight\n",
@@ -1386,11 +1386,7 @@
         "])\n",
         "\n",
         "def neural_network(features, weights):\n",
-        "  prediction = [0, 0, 0]\n",
-        "  #dot_prod = features.dot(weights)\n",
-        "  for i in range(len(features)):\n",
-        "    prediction[i] = features.dot(weights[i])\n",
-        "    #prediction = np.matmul(features, weights)\n",
+        "  prediction = [features.dot(weights[i]) for i in range(len(features))]\n",
         "  return prediction\n",
         "\n",
         "# define features as all game of the season\n",
@@ -1405,7 +1401,7 @@
         "pred = neural_network(inputs, weights)\n",
         "print(pred)"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
