--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -384,11 +384,11 @@
       "metadata": {
         "id": "eQg5DMCCw_2v",
         "colab_type": "code",
+        "outputId": "9a3ccf7c-23f1-41c2-b074-8d8ce18465c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "9a3ccf7c-23f1-41c2-b074-8d8ce18465c0"
+        }
       },
       "source": [
         "number_of_toes = [8.5]\n",
@@ -402,7 +402,7 @@
         "error = (pred - true) ** 2\n",
         "print(error)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,11 +438,11 @@
       "metadata": {
         "id": "n3Wz18CVxxYl",
         "colab_type": "code",
+        "outputId": "eeeaf9e2-788e-4da9-bfcb-ca18c1242572",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "eeeaf9e2-788e-4da9-bfcb-ca18c1242572"
+        }
       },
       "source": [
         "lr = 0.1 # higher\n",
@@ -452,7 +452,7 @@
         "err_up = (pred_up - true) ** 2\n",
         "print(err_up)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,11 +468,11 @@
       "metadata": {
         "id": "eEsEMaH2yZeu",
         "colab_type": "code",
+        "outputId": "b3e99946-2791-41ae-c1ad-1c626da2a912",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "b3e99946-2791-41ae-c1ad-1c626da2a912"
+        }
       },
       "source": [
         "lr = 0.01  # lower\n",
@@ -482,7 +482,7 @@
         "err_down = (pred_down - true) ** 2\n",
         "print(err_down)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,11 +569,11 @@
       "metadata": {
         "id": "TTqXlYC6zspO",
         "colab_type": "code",
+        "outputId": "33d1d11a-b7b1-40b7-c98b-55470238acbd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "33d1d11a-b7b1-40b7-c98b-55470238acbd"
+        }
       },
       "source": [
         "weight = 0.5\n",
@@ -601,7 +601,7 @@
         "  if (down_error > up_error):\n",
         "    weight = weight + step_amount    # If up is better, go up!"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1786,11 +1786,11 @@
       "metadata": {
         "id": "RqEx5rq72heo",
         "colab_type": "code",
+        "outputId": "35d85920-6246-4e00-be73-81c415885508",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "35d85920-6246-4e00-be73-81c415885508"
+        }
       },
       "source": [
         "weight = 0.5\n",
@@ -1818,7 +1818,7 @@
         "  if (down_error > up_error):\n",
         "    weight = weight + step_amount    # If up is better, go up!"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2934,11 +2934,11 @@
       "metadata": {
         "id": "QK0e2sORAwSu",
         "colab_type": "code",
+        "outputId": "9bb0bf71-d51e-4bb9-a32b-922a34d11ed2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "9bb0bf71-d51e-4bb9-a32b-922a34d11ed2"
+        }
       },
       "source": [
         "weight = 0.5\n",
@@ -2966,7 +2966,7 @@
         "  if (down_error > up_error):\n",
         "    weight = weight + step_amount    # If up is better, go up!"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -4104,9 +4104,353 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j_Cs4gdi4ksu",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/direction-and-amount.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GOBsvbKSA2pA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 372
+        },
+        "outputId": "834376ab-6a9e-48f0-dea7-55054198fe30"
+      },
+      "source": [
+        "weight = 0.5\n",
+        "goal_pred = 0.8\n",
+        "input = 0.5\n",
+        "\n",
+        "for iteration in range(20):\n",
+        "  pred = input * weight\n",
+        "  error = (pred - goal_pred) ** 2\n",
+        "  direction_and_amount = (pred - goal_pred) * input\n",
+        "  weight = weight - direction_and_amount\n",
+        "  print(f'Error: {str(error)} \\t\\t\\t Prediction: {str(pred)}')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Error: 0.30250000000000005 \t\t\t Prediction: 0.25\n",
+            "Error: 0.17015625000000004 \t\t\t Prediction: 0.3875\n",
+            "Error: 0.095712890625 \t\t\t Prediction: 0.49062500000000003\n",
+            "Error: 0.05383850097656251 \t\t\t Prediction: 0.56796875\n",
+            "Error: 0.03028415679931642 \t\t\t Prediction: 0.6259765625\n",
+            "Error: 0.0170348381996155 \t\t\t Prediction: 0.669482421875\n",
+            "Error: 0.00958209648728372 \t\t\t Prediction: 0.70211181640625\n",
+            "Error: 0.005389929274097089 \t\t\t Prediction: 0.7265838623046875\n",
+            "Error: 0.0030318352166796153 \t\t\t Prediction: 0.7449378967285156\n",
+            "Error: 0.0017054073093822882 \t\t\t Prediction: 0.7587034225463867\n",
+            "Error: 0.0009592916115275371 \t\t\t Prediction: 0.76902756690979\n",
+            "Error: 0.0005396015314842384 \t\t\t Prediction: 0.7767706751823426\n",
+            "Error: 0.000303525861459885 \t\t\t Prediction: 0.7825780063867569\n",
+            "Error: 0.00017073329707118678 \t\t\t Prediction: 0.7869335047900676\n",
+            "Error: 9.603747960254256e-05 \t\t\t Prediction: 0.7902001285925507\n",
+            "Error: 5.402108227642978e-05 \t\t\t Prediction: 0.7926500964444131\n",
+            "Error: 3.038685878049206e-05 \t\t\t Prediction: 0.7944875723333098\n",
+            "Error: 1.7092608064027242e-05 \t\t\t Prediction: 0.7958656792499823\n",
+            "Error: 9.614592036015323e-06 \t\t\t Prediction: 0.7968992594374867\n",
+            "Error: 5.408208020258491e-06 \t\t\t Prediction: 0.7976744445781151\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PDUjafU16FaR",
+        "colab_type": "text"
+      },
+      "source": [
+        "## One iteration of gradient descent\n",
+        "\n",
+        "**This performs a weight update on a single training example\n",
+        "(input->true) pair.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pK14-kTv6HQU",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/gradient-descent-1.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BFXKwLId5l8S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "weight = 0.1\n",
+        "alpha = 0.01\n",
+        "\n",
+        "def neural_network(input , weight):\n",
+        "  prediction = input * weight\n",
+        "  return prediction"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ebewGj6L6lPB",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/gradient-descent-2.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kxWs4TZF6i3g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "90f480d1-7e33-46ab-afac-5316701539a2"
+      },
+      "source": [
+        "number_of_toes = [8.5]\n",
+        "win_or_lose_binary = [1]  # (won!!!)\n",
+        "\n",
+        "input = number_of_toes[0]\n",
+        "goal_pred = win_or_lose_binary[0]\n",
+        "\n",
+        "pred = neural_network(input, weight)\n",
+        "\n",
+        "error = (pred - goal_pred) ** 2\n",
+        "print(error)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.022499999999999975\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xKoX3J_t7om2",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/gradient-descent-3.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "behmF1Si7m6t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "7af74559-c018-464e-b079-7dacacbf97c9"
+      },
+      "source": [
+        "number_of_toes = [8.5]\n",
+        "win_or_lose_binary = [1]  # (won!!!)\n",
+        "\n",
+        "input = number_of_toes[0]\n",
+        "goal_pred = win_or_lose_binary[0]\n",
+        "\n",
+        "pred = neural_network(input, weight)\n",
+        "print(pred)\n",
+        "\n",
+        "delta = pred - goal_pred\n",
+        "print(delta)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8500000000000001\n",
+            "-0.1499999999999999\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MpxnymUb8wr5",
+        "colab_type": "text"
+      },
+      "source": [
+        "delta is a measurement of how much this node missed. The true prediction is 1.0, and the network’s prediction was 0.85, so the network was too low by 0.15. Thus, delta is negative 0.15.\n",
+        "\n",
+        "The primary difference between gradient descent and this implementation is the new variable\n",
+        "delta. It’s the raw amount that the node was too high or too low. Instead of computing\n",
+        "direction_and_amount directly, you first calculate how much you want the output node to be\n",
+        "different. Only then do you compute direction_and_amount to change weight (in step 4, now\n",
+        "renamed weight_delta):\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/gradient-descent-4.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yAvZ06XT8PsH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "c5d94028-b7b1-4542-ffe6-e1d56ef83187"
+      },
+      "source": [
+        "number_of_toes = [8.5]\n",
+        "win_or_lose_binary = [1]  # (won!!!)\n",
+        "\n",
+        "input = number_of_toes[0]\n",
+        "goal_pred = win_or_lose_binary[0]\n",
+        "\n",
+        "pred = neural_network(input, weight)\n",
+        "print(pred)\n",
+        "\n",
+        "error = (pred - goal_pred) ** 2\n",
+        "print(error)\n",
+        "\n",
+        "delta = pred - goal_pred\n",
+        "print(delta)\n",
+        "\n",
+        "weight_delta = input * delta\n",
+        "print(weight_delta)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8500000000000001\n",
+            "0.022499999999999975\n",
+            "-0.1499999999999999\n",
+            "-1.2749999999999992\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "du_MJ2E-99WP",
+        "colab_type": "text"
+      },
+      "source": [
+        "weight_delta is a measure of how much a weight caused the network to miss. You calculate\n",
+        "it by multiplying the weight’s output node delta by the weight’s input. Thus, you create\n",
+        "each weight_delta by scaling its output node delta by the weight’s input. This accounts\n",
+        "for the three aforementioned properties of direction_and_amount: scaling, negative\n",
+        "reversal, and stopping.\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/gradient-descent-6.JPG?raw=1' width='800'/>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4GhLKG9S-LkZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "a80575b2-9dd4-4d9c-8cb5-84fe84bfdf61"
+      },
+      "source": [
+        "number_of_toes = [8.5]\n",
+        "win_or_lose_binary = [1]  # (won!!!)\n",
+        "\n",
+        "input = number_of_toes[0]\n",
+        "goal_pred = win_or_lose_binary[0]\n",
+        "\n",
+        "pred = neural_network(input, weight)\n",
+        "print(pred)\n",
+        "\n",
+        "error = (pred - goal_pred) ** 2\n",
+        "print(error)\n",
+        "\n",
+        "delta = pred - goal_pred\n",
+        "print(delta)\n",
+        "\n",
+        "weight_delta = input * delta\n",
+        "print(weight_delta)\n",
+        "\n",
+        "alpha = 0.01  # learning rate\n",
+        "weight -= weight_delta * alpha\n",
+        "print(weight)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8500000000000001\n",
+            "0.022499999999999975\n",
+            "-0.1499999999999999\n",
+            "-1.2749999999999992\n",
+            "0.11275\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tg2ytqDT_AW7",
+        "colab_type": "text"
+      },
+      "source": [
+        "You multiply weight_delta by a small number alpha before using it to update weight. This lets you control how fast the network learns. If it learns too fast, it can update weights too aggressively and overshoot.\n",
+        "\n",
+        "Note that the weight update made the same change (small increase) as hot and cold learning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xf_ZfCby_S6e",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Learning is just reducing error\n",
+        "**You can modify weight to reduce error.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mIar_Q_D-tn9",
         "colab_type": "code",
         "colab": {}
       },
