--- a/generalizing_gradient_descent.ipynb
+++ b/generalizing_gradient_descent.ipynb
@@ -97,11 +97,11 @@
       "metadata": {
         "id": "yr2Va4Ulpb70",
         "colab_type": "code",
+        "outputId": "2bbd482b-9ec1-4aa5-9b10-c7964fc82cf5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "2bbd482b-9ec1-4aa5-9b10-c7964fc82cf5"
+        }
       },
       "source": [
         "toes = [8.5 , 9.5, 9.9, 9.0]\n",
@@ -122,7 +122,7 @@
         "delta = pred - true\n",
         "print(f'Delta: {str(delta)}')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,11 +150,11 @@
       "metadata": {
         "id": "DL_iCSf5qV4b",
         "colab_type": "code",
+        "outputId": "4a9cecc2-3b7d-4de4-d590-38698f6d2b12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
-        },
-        "outputId": "4a9cecc2-3b7d-4de4-d590-38698f6d2b12"
+        }
       },
       "source": [
         "def ele_mul(number, vector):\n",
@@ -182,7 +182,7 @@
         "for wd in weight_deltas:\n",
         "  print(f'Weight Delta: {str(wd)}')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,11 +219,11 @@
       "metadata": {
         "id": "YnfSc0zYrokw",
         "colab_type": "code",
+        "outputId": "1e521233-54e8-4f95-af06-3973a91c1b52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "1e521233-54e8-4f95-af06-3973a91c1b52"
+        }
       },
       "source": [
         "input = [toes[0], wlrec[0], nfans[0]]\n",
@@ -243,7 +243,7 @@
         "print(f'Weights: {str(weights)}')\n",
         "print(f'Weight Deltas: {str(weight_deltas)}')  "
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,9 +256,155 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k7Jx3Te5_jJE",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Let’s watch several steps of learning"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ODBtQz78tFKc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 444
+        },
+        "outputId": "d1922cc2-304f-44f1-c6ae-181d16224c12"
+      },
+      "source": [
+        "def neural_network(input, weights):\n",
+        "  output = 0\n",
+        "  for i in range(len(input)):\n",
+        "    output += (input[i] * weights[i])\n",
+        "  return output\n",
+        "\n",
+        "def ele_mul(scalar, vector):\n",
+        "  output = [0, 0, 0]\n",
+        "  for i in range(len(output)):\n",
+        "    output[i] = vector[i] * scalar\n",
+        "  return output\n",
+        "\n",
+        "toes = [8.5 , 9.5, 9.9, 9.0]\n",
+        "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+        "nfans = [1.2 , 1.3, 0.5, 1.0]     \n",
+        "\n",
+        "win_or_lose_binary = [1, 1, 0, 1]\n",
+        "true = win_or_lose_binary[0]\n",
+        "\n",
+        "alpha = 0.01\n",
+        "weights = [0.1, 0.2, -.1]\n",
+        "input = [toes[0], wlrec[0], nfans[0]]\n",
+        "\n",
+        "for iter in range(3):\n",
+        "  pred = neural_network(input, weights)\n",
+        "\n",
+        "  error = (pred - true) ** 2\n",
+        "  delta = pred - true\n",
+        "\n",
+        "  weight_deltas = ele_mul(delta, input)\n",
+        "\n",
+        "  print(f'Iteration: {str(iter + 1)}')\n",
+        "  print(f'Prediction: {str(pred)}')\n",
+        "  print(f'Error: {str(error)}')\n",
+        "  print(f'Delta: {str(delta)}')\n",
+        "  print(f'Weights: {str(weights)}')\n",
+        "  print(f'Weight_Deltas:')\n",
+        "  print(str(weight_deltas))\n",
+        "  print()\n",
+        "\n",
+        "for i in range(len(weights)):\n",
+        "  weights[i] -= alpha * weight_deltas[i]  "
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Iteration: 1\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[-1.189999999999999, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n",
+            "Iteration: 2\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[-1.189999999999999, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n",
+            "Iteration: 3\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[-1.189999999999999, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KOwjq4rtEz2y",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/iteration-1.JPG?raw=1' width='800'/>\n",
+        "\n",
+        "We can make three individual error/weight curves, one for each weight. As before, the slopes\n",
+        "of these curves (the dotted lines) are reflected by the weight_delta values. Notice that **a** is\n",
+        "steeper than the others. Why is weight_delta steeper for **a** than the others if they share the\n",
+        "same output delta and error measure? Because **a** has an input value that’s significantly\n",
+        "higher than the others and thus, a higher derivative.\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/iteration-2.JPG?raw=1' width='800'/>\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/iteration-3.JPG?raw=1' width='800'/>\n",
+        "\n",
+        "Most of the learning (weight changing) was performed\n",
+        "on the weight with the largest input **a** , because the input changes the slope significantly.\n",
+        "This isn’t necessarily advantageous in all settings. A subfield called normalization helps\n",
+        "encourage learning across all weights despite dataset characteristics such as this. This\n",
+        "significant difference in slope forced me to set alpha lower than I wanted (0.01 instead of\n",
+        "0.1). Try setting alpha to 0.1: do you see how **a**a causes it to diverge?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1YKezjBPG_fB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Freezing one weight: What does it do?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oM07AKvLHBSm",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NkNt4VRGEf6A",
         "colab_type": "code",
         "colab": {}
       },
