--- a/generalizing_gradient_descent.ipynb
+++ b/generalizing_gradient_descent.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "generalizing-gradient-descent.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,10 +98,10 @@
       "metadata": {
         "id": "yr2Va4Ulpb70",
         "colab_type": "code",
-        "outputId": "2bbd482b-9ec1-4aa5-9b10-c7964fc82cf5",
+        "outputId": "a72d1b55-9c95-4bf6-8dfe-779baa96caa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 0
         }
       },
       "source": [
@@ -122,7 +123,7 @@
         "delta = pred - true\n",
         "print(f'Delta: {str(delta)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,10 +151,10 @@
       "metadata": {
         "id": "DL_iCSf5qV4b",
         "colab_type": "code",
-        "outputId": "4a9cecc2-3b7d-4de4-d590-38698f6d2b12",
+        "outputId": "721dc9e6-f3e1-4208-a7da-4f38d58e3c3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 0
         }
       },
       "source": [
@@ -182,7 +183,7 @@
         "for wd in weight_deltas:\n",
         "  print(f'Weight Delta: {str(wd)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,10 +220,10 @@
       "metadata": {
         "id": "YnfSc0zYrokw",
         "colab_type": "code",
-        "outputId": "1e521233-54e8-4f95-af06-3973a91c1b52",
+        "outputId": "44917fb4-e444-41da-b83d-1a924f3001af",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 0
         }
       },
       "source": [
@@ -243,7 +244,7 @@
         "print(f'Weights: {str(weights)}')\n",
         "print(f'Weight Deltas: {str(weight_deltas)}')  "
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,11 +271,11 @@
       "metadata": {
         "id": "ODBtQz78tFKc",
         "colab_type": "code",
+        "outputId": "a3bb1749-a25b-49fc-9f7f-1776d843d76c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        },
-        "outputId": "d1922cc2-304f-44f1-c6ae-181d16224c12"
+        }
       },
       "source": [
         "def neural_network(input, weights):\n",
@@ -320,7 +321,7 @@
         "for i in range(len(weights)):\n",
         "  weights[i] -= alpha * weight_deltas[i]  "
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,13 +399,145 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "This experiment is a bit advanced in terms of theory, but I think it’s a great exercise to\n",
+        "understand how the weights affect each other. You’re going to train again, except weight **a**\n",
+        "won’t ever be adjusted. You’ll try to learn the training example using only weights **b** and **c**\n",
+        "(weights[1] and weights[2])."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "NkNt4VRGEf6A",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 444
+        },
+        "outputId": "87f970a1-a15e-4d5e-c6d6-b535fec9319c"
+      },
+      "source": [
+        "def neural_network(input, weights):\n",
+        "  output = 0\n",
+        "  for i in range(len(input)):\n",
+        "    output += (input[i] * weights[i])\n",
+        "  return output\n",
+        "\n",
+        "def ele_mul(scalar, vector):\n",
+        "  output = [0, 0, 0]\n",
+        "  for i in range(len(output)):\n",
+        "    output[i] = vector[i] * scalar\n",
+        "  return output\n",
+        "\n",
+        "toes = [8.5 , 9.5, 9.9, 9.0]\n",
+        "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+        "nfans = [1.2 , 1.3, 0.5, 1.0]     \n",
+        "\n",
+        "win_or_lose_binary = [1, 1, 0, 1]\n",
+        "true = win_or_lose_binary[0]\n",
+        "\n",
+        "alpha = 0.3\n",
+        "weights = [0.1, 0.2, -.1]\n",
+        "input = [toes[0], wlrec[0], nfans[0]]\n",
+        "\n",
+        "for iter in range(3):\n",
+        "  pred = neural_network(input, weights)\n",
+        "\n",
+        "  error = (pred - true) ** 2\n",
+        "  delta = pred - true\n",
+        "\n",
+        "  weight_deltas = ele_mul(delta, input)\n",
+        "  weight_deltas[0] = 0\n",
+        "\n",
+        "  print(f'Iteration: {str(iter + 1)}')\n",
+        "  print(f'Prediction: {str(pred)}')\n",
+        "  print(f'Error: {str(error)}')\n",
+        "  print(f'Delta: {str(delta)}')\n",
+        "  print(f'Weights: {str(weights)}')\n",
+        "  print(f'Weight_Deltas:')\n",
+        "  print(str(weight_deltas))\n",
+        "  print()\n",
+        "\n",
+        "for i in range(len(weights)):\n",
+        "  weights[i] -= alpha * weight_deltas[i]"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Iteration: 1\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[0, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n",
+            "Iteration: 2\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[0, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n",
+            "Iteration: 3\n",
+            "Prediction: 0.8600000000000001\n",
+            "Error: 0.01959999999999997\n",
+            "Delta: -0.1399999999999999\n",
+            "Weights: [0.1, 0.2, -0.1]\n",
+            "Weight_Deltas:\n",
+            "[0, -0.09099999999999994, -0.16799999999999987]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wUniydpEznRe",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/freezing-weight-1.JPG?raw=1' width='800'/>\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/freezing-weight-2.JPG?raw=1' width='800'/>\n",
+        "\n",
+        "error is determined by the training data. Any network can have any weight value, but\n",
+        "the value of error given any particular weight configuration is 100% determined by data.\n",
+        "You’ve already seen how the steepness of the U shape is affected by the input data (on\n",
+        "several occasions). What you’re really trying to do with the neural network is find the\n",
+        "lowest point on this big error plane, where the lowest point refers to the lowest error.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GlcliHHm0FB1",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Gradient descent learning with multiple outputs"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ElRvuvhJ0GOD",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MLcsjYf6rNPN",
         "colab_type": "code",
         "colab": {}
       },
