--- a/13_introducing_automatic_optimization.ipynb
+++ b/13_introducing_automatic_optimization.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "13-introducing-automatic-optimization.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNqeC+/Uzx8Ofrx7ZRJOcY",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOMGEaOA78b2BvfvwviipXU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,17 +120,17 @@
       "metadata": {
         "id": "J0KAP7MN2qhA",
         "colab_type": "code",
+        "outputId": "167ff0a5-c3b9-4b9b-c382-555e53f70e44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "63c641cb-0c4f-4804-b7cd-1f74856d2f95"
+        }
       },
       "source": [
         "x = Tensor([1, 2, 3, 4, 5])\n",
         "print(x)"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,17 +146,17 @@
       "metadata": {
         "id": "nzkwYvuj2xOv",
         "colab_type": "code",
+        "outputId": "3958d471-5fcd-47cc-9c73-2e0c1fe7436c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1ccf223e-4125-4b9e-8fae-61a255bd11f1"
+        }
       },
       "source": [
         "y = x + x\n",
         "print(y)"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,18 +241,18 @@
       "metadata": {
         "id": "NQXKSrCb5EgH",
         "colab_type": "code",
+        "outputId": "486d7135-18da-470f-8a5d-e99c88d5b15b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "eed90f97-d4c6-405d-cb12-d2276a6236bd"
+        }
       },
       "source": [
         "x = Tensor([1, 2, 3, 4, 5])\n",
         "y = Tensor([2, 2, 2, 2, 2])\n",
         "print(x, y)"
       ],
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,17 +268,17 @@
       "metadata": {
         "id": "LORe848Y5Wl6",
         "colab_type": "code",
+        "outputId": "5b88255a-71f0-4173-8812-ce03342844bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "25820cad-1b96-4237-c61b-ae11701999b1"
+        }
       },
       "source": [
         "z = x + y\n",
         "print(z)"
       ],
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,16 +294,16 @@
       "metadata": {
         "id": "qzsn5Yv85hA4",
         "colab_type": "code",
+        "outputId": "9dd831cf-8719-4d7b-fc1e-f63f30ad20ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "aeb593fe-285d-4084-b60a-e1059a30433a"
+        }
       },
       "source": [
         "print(z.backward(Tensor(np.array([1, 1, 1, 1, 1]))))"
       ],
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,11 +345,11 @@
       "metadata": {
         "id": "b2UNGYKN8Yzm",
         "colab_type": "code",
+        "outputId": "ed8a3218-fb5e-4874-bc5c-b44edeb765da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "ba477c67-21bd-44ff-85c9-8a35dd7c86ab"
+        }
       },
       "source": [
         "print(x.grad)\n",
@@ -356,7 +357,7 @@
         "print(z.creators)\n",
         "print(z.creation_op)"
       ],
-      "execution_count": 18,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,17 +406,17 @@
       "metadata": {
         "id": "nbLPtaW09mGO",
         "colab_type": "code",
+        "outputId": "fe7c7f7b-06d7-40b4-9b10-0835c5d95fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e81dba4f-ed6e-483e-e4b4-51eea3084e89"
+        }
       },
       "source": [
         "g.backward(Tensor(np.array([1, 1, 1, 1, 1])))\n",
         "print(a.grad)"
       ],
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +444,107 @@
         "colab_type": "text"
       },
       "source": [
-        "**Everything in Tensor is another form of lessons already learned.**"
+        "**Everything in Tensor is another form of lessons already learned.**\n",
+        "\n",
+        "Before moving on, I want to first acknowledge that even if it feels like a bit of a stretch or a heavy lift to think about gradients flowing over a graphical structure, this is nothing new compared to what you’ve already been working with. In the previous chapter on RNNs, you forward propagated in one direction and then back propagated across a (virtual graph) of activations.\n",
+        "\n",
+        "In particular, this notion of a graph that gets built during forward propagation is called a dynamic computation graph because it’s built\n",
+        "on the fly during forward prop. This is the type of autograd present in newer deep learning frameworks such as DyNet and PyTorch. Older frameworks such as Theano and TensorFlow have what’s called a static computation graph, which is specified before forward propagation even begins.\n",
+        "\n",
+        "In general, dynamic computation graphs are easier to write/experiment with, and static computation graphs have faster runtimes because of some fancy logic under the hood. But note that dynamic and static frameworks have lately been moving toward the middle, allowing dynamic graphs to compile to static ones (for faster runtimes) or allowing static graphs to be built dynamically (for easier experimentation). In the long run, you’re likely to end up with both. The primary difference is whether forward propagation is happening during graph construction or after the graph is already defined.\n",
+        "\n",
+        "The main point, here, is to help prepare you for deep learning in the real world, where 10% (or less) of your time will be spent thinking up a new idea and 90% of your time will be spent figuring out how to get a deep learning framework to play nicely. Debugging these frameworks can be extremely difficult at times, because most bugs don’t raise an error and print out a stack trace. Most bugs lie hidden within the code, keeping the network from training as it should (even if it appears to be training somewhat)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QnUPED_SedGQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Tensors that are used multiple times"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QIf9R3Qqefml",
+        "colab_type": "text"
+      },
+      "source": [
+        "**The basic autograd has a rather pesky bug. Let’s squish it!**\n",
+        "\n",
+        "Sometimes, during forward propagation, you’ll use the same tensor multiple times (the weights of a neural network), and thus multiple parts of the graph will backpropagate gradients into the same tensor. But the code will currently compute the incorrect gradient when backpropagating into a variable that was used multiple times (is the parent of multiple children)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HZqA4expfpKU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3d6d40cb-fd2e-44c6-bdf3-f21dd587ff55"
+      },
+      "source": [
+        "a = Tensor([1, 2, 3, 4, 5])\n",
+        "b = Tensor([2, 2, 2, 2, 2])\n",
+        "c = Tensor([5, 4, 3, 2, 1])\n",
+        "\n",
+        "d = a + b\n",
+        "e = b + c\n",
+        "f = d + e\n",
+        "f.backward(Tensor(np.array([1, 1, 1, 1, 1])))\n",
+        "print(b.grad.data == np.array([2, 2, 2, 2, 2]))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[False False False False False]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oPYIvLSugZ3k",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this example, the b variable is used twice in the process of creating f. Thus, its gradient should be the sum of two derivatives: [2,2,2,2,2]. Shown here is the resulting graph created by this chain of operations. Notice there are now two pointers pointing into b: so, it should be the sum of the gradient coming from both e and d.\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/img-repo/blob/master/grokking-deep-learning/node-graph-2.png?raw=1' width='800'/>\n",
+        "\n",
+        "But the current implementation of Tensor merely overwrites each derivative with the previous. First, d applies its gradient, and then it gets overwritten with the gradient from e. We need to change the way gradients are written."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ldXAmxE_grOt",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Upgrading autograd to support multiuse tensors"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T_MCQ7LYgsQ1",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Add one new function, and update three old ones.**\n",
+        "\n",
+        "This update to the Tensor object adds two new features. First, gradients can be accumulated so that when a variable is used more than once, it receives gradients from all children:"
       ]
     },
     {
@@ -454,7 +555,29 @@
         "colab": {}
       },
       "source": [
-        ""
+        "class Tensor(object):\n",
+        "\n",
+        "  def __init__(self, data, creators=None, creation_op=None):\n",
+        "    self.data = np.array(data)\n",
+        "    self.creation_op = creation_op\n",
+        "    self.creators = creators\n",
+        "    self.grad = None\n",
+        "\n",
+        "  def backward(self, grad):\n",
+        "    self.grad = grad\n",
+        "\n",
+        "    if (self.creation_op == 'add'):\n",
+        "      self.creators[0].backward(grad)\n",
+        "      self.creators[1].backward(grad)\n",
+        "\n",
+        "  def __add__(self, other):\n",
+        "    return Tensor(self.data + other.data, creators=[self, other], creation_op='add')\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return str(self.data.__repr__())\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return str(self.data.__str__())"
       ],
       "execution_count": 0,
       "outputs": []
